2008-09-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (standard_args): Add --daemon.
	(main): Disconnect from the terminal when --daemon is passed.
	(is_daemon): New variable.
	(Fdaemonp): New function.
	(syms_of_emacs): Defsubr it.

2008-09-20  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (get_next_display_element): Handle string display
	correctly when checking for the end of a box run.

2008-09-20  Glenn Morris  <rgm@gnu.org>

	* fileio.c (Qdelete_by_moving_to_trash): New Lisp_Object.
	(syms_of_fileio): Add Qdelete_by_moving_to_trash.
	(Frename_file): Avoid copying to trash if a rename involves
	a delete.  (Bug#964).

2008-09-20  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (Fset_quit_char, Fset_input_meta_mode)
	(Fset_output_flow_control, Fcurrent_input_mode): Support MSDOS
	frames as well as termcap frames.
	(handle_interrupt): Remove "#ifndef MSDOS" around the call to
	get_named_tty.

2008-09-19  Eli Zaretskii  <eliz@gnu.org>

	* process.c (procfs_system_process_attributes): Fix cmdline in
	case /proc/PID/cmdline is empty.

	* xterm.c (x_wm_set_size_hint): Use x_display_pixel_width and
	x_display_pixel_height.

2008-09-19  Juanma Barranquero  <lekktu@gmail.com>

	* frame.c (x_fullscreen_adjust): Declare var as Display_Info.

	* w32fns.c (Fx_display_pixel_width, Fx_display_pixel_height)
	(compute_tip_xy): Use x_display_pixel_width, x_display_pixel_height.

2008-09-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* dispextern.h (struct it): Move line_wrap away from the middle of
	bitfields.  Move voffset in struct iterator_stack_entry after the
	bitfields.  Move tab_width near after another short.

2008-09-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* frame.h (struct frame): Move alpha from the middle of bitfields.

	* window.h (struct window): Move frozen_window_start_p after the
	rest of the bitfields to reduce padding.

2008-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.h (x_display_info): Remove `height' and `width' members.
